@@ -44,7 +44,11 @@ var WwwRoot *string = flag.String("www-root",
 	"/var/lib/hockeypuck/www",
 	"Location of static web server files and templates")
 
+// Logfile option
 var LogFile *string = flag.String("logfile", "", "Logfile (default stderr)")
+
+// Downstream PKS servers
+var PksSync *string = flag.String("pks-sync", "", "PKS servers to forward keys")
 
 func OpenLog() *log.Logger {
 	var LogOut io.Writer = os.Stderr
