@@ -2,8 +2,11 @@ hockeypuck (0.7~a1) precise; urgency=low
 
   [ Casey Marshall ]
   * Opening 0.7 milestone.
+  * cli/cli.go, cmd/hockeypuck-mgo/main.go, mgo/pks.go, mgo/worker.go,
+    pks.go, worker.go:
+    - Add support for PKS forwarding. LP: #1075379
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Fri, 16 Nov 2012 00:22:23 -0600
+ -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 21 Nov 2012 13:05:01 -0600
 
 hockeypuck (0.6) precise; urgency=low
 
